[Bromley] Fix colour contrast on active segmented control

--- a/web/cobrands/bromley/base.scss
+++ b/web/cobrands/bromley/base.scss
@@ -59,6 +59,10 @@ body.frontpage.fullwidthpage {
   line-height: normal;
 }
 
+#front-main #postcodeForm .form-hint {
+  color: mix($primary, $primary_text, 30%);
+}
+
 .bromley-header {
   // These are from Bromley's styles, applied here because it's the closest
   // analog to their site header.
